force-app/main/default/objects/maps__CalendarResourceShift__c/maps__CalendarResourceShift__c.object-meta.xml
<CustomObject>
    <label>Maps Calendar Resource Shift</label>
    <nameField>
        <displayFormat>Shift-{0}</displayFormat>
        <label>Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Calendar Resource Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>