force-app/main/default/objects/maps__CalendarResourceShift__c/fields/maps__BreakDuration__c.field-meta.xml
<CustomField>
    <fullName>maps__BreakDuration__c</fullName>
    <label>Break Duration (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>