force-app/main/default/objects/maps__CalendarResourceShift__c/fields/maps__BreakStartMinute__c.field-meta.xml
<CustomField>
    <fullName>maps__BreakStartMinute__c</fullName>
    <label>Break Start Minute</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>