force-app/main/default/objects/maps__CalendarResourceShift__c/fields/maps__Date__c.field-meta.xml
<CustomField>
    <fullName>maps__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>