force-app/main/default/objects/maps__CalendarResourceShift__c/fields/maps__EndLocation__c.field-meta.xml
<CustomField>
    <fullName>maps__EndLocation__c</fullName>
    <label>End Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>