force-app/main/default/objects/maps__CalendarResourceShift__c/fields/maps__StartHour__c.field-meta.xml
<CustomField>
    <fullName>maps__StartHour__c</fullName>
    <label>Start Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>