force-app/main/default/objects/maps__CalendarResourceShift__c/fields/maps__StartLocation__c.field-meta.xml
<CustomField>
    <fullName>maps__StartLocation__c</fullName>
    <label>Start Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>